[tool.poetry]
name = "socker"
version = "0.1.0"
description = "Sock maker!"
authors = ["Sean Joseph <theseanjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
uvicorn = "^0.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
